<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/blue">

    <ImageView
        android:id="@+id/image1"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo2"
        android:layout_centerInParent="true"/>

    <AutoCompleteTextView
        android:id="@+id/input1_activity_main"
        android:layout_below="@+id/image1"
        android:completionThreshold="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_user_activity_main"/>

    <EditText
        android:id="@+id/input2_activity_main"
        android:layout_below="@+id/input1_activity_main"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password_activity_main"/>


    <Button
        android:id="@+id/button_activity_main"
        android:layout_below="@+id/input2_activity_main"
        android:backgroundTint="@color/orange"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button_activity_main"/>

    <ProgressBar
        android:id="@+id/progress_bar_activity_main"
        android:layout_below="@+id/image1"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

</RelativeLayout>